Fixed problem with drop down menu on narrow screen Added search icon
Still need to fix google error not showing up.
Need to write error handling on google map

--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,18 @@ html, body {
 }
 
 .container {
-	width: 100%;
+	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
 }
+
+h3{
+	text-align: center;
+}
+
 .map-div {
 	min-height: 400px;
 	width: 100%;
-	margin-left: 5px;
 }
 
 .head {
@@ -51,21 +55,28 @@ html, body {
 }
 
 @media screen and (max-width: 400px)  {
+	.nav-div {
+		width: 60%;
+		margin-right: auto;
+		margin-left: auto;
+	}
+
 	.nav-menu {
 		position: relative;
 		display: block;
-		width: 60%;
-		margin-left: auto;
-		margin-right: auto;
 		text-decoration: none;
 		text-align: center;
 		line-height: 20px;
 		padding: 10px 2px 10px 2px;
-		background-color: grey;
+		background-color: #99FFCC;
 		border: solid 1px #1e2a36;
+		border-radius: 2px;
+		font-weight: bold;
+		color: black;
 	}
 
 	.nav-menu:after {
+		/*unicode for downward pointing arrow*/
 		content: "\25BC";
 		font-size: 0.5em;
 		display: block;
@@ -75,10 +86,7 @@ html, body {
 		position:absolute;
 	}
 
-	/*.nav-menu:hover ul {
-		display: block;
-	}*/
-
+	
 	.head {
 		display:none;
 		position: relative;
@@ -86,34 +94,38 @@ html, body {
 		padding-left: 0;
 	}
 
-	.nav-menu:hover + .head {
+	.nav-div:hover > .head {
 		display: block;
 	}
 
-/*
-	#selected-list {
-		display: none;
-		position: relative;
-		margin-top: 0;
-		padding-left: 0;
-		//float:left;
-	}
 
-*/
 	#selected-list li{
+		width: 100%;
 		position: relative;
 		border-bottom: 1px solid rgba(255,255,255,.2);
-		width: 60%;
 		text-align: center;
-		margin-left: auto;
-		margin-right: auto;
-		border-radius: 0;
-		background-color: grey;
+		background-color: #99FFCC;
 		list-style: none;
-
+		padding: 10px 0 10px 0;
+		border-radius: 2px;
+		border-width: 1px;
 	}
 
+}
 
+/*with KO, selector input[type="text"] does not work!*/
+.search-box {
+	min-width: 180px;
+	padding: 5px;
+	outline: none;
+	border: 2px solid #999999;
+	border-radius: 5px;
+	background-color: #FB#FB#FB;
+	font-size: 16px;
+	background-image: url("../images/search.png");
+	background-position: 110% 2%;
+	background-repeat: no-repeat;
+	margin-left: 5px;
 }
 
 .btn-noshow {
@@ -150,4 +162,9 @@ html, body {
 
 .loc-list {
 	display: none;
+}
+
+.show-err{
+	position: absolute;
+	z-index: 500;
 }
